--- a/src/static/styles/main.scss
+++ b/src/static/styles/main.scss
@@ -1,5 +1,29 @@
-$icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
-@import '~bootstrap-sass/assets/stylesheets/bootstrap/_mixins.scss';
-@import '~bootstrap-sass/assets/stylesheets/_bootstrap.scss';
+// $icon-font-path: '~bootstrap-sass/assets/fonts/bootstrap/';
+// @import '~bootstrap-sass/assets/stylesheets/bootstrap/_mixins.scss';
+// @import '~bootstrap-sass/assets/stylesheets/_bootstrap.scss';
 
 // can add Boostrap overrides, additional Sass/CSS below...
+body {
+    padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    color: #666666;
+    background-color: #ecf0f1;
+}
+
+
+#app,
+.wrapper {
+  height: 100%;
+}
+
+.padded.column {
+  margin-left: 15px;
+  margin-right: 15px;
+}
+
+.login.page {
+  position: relative;
+  top: 25%;
+  width: 320px;
+}
